--- a/css/theme-dark-head-light.css
+++ b/css/theme-dark-head-light.css
@@ -5874,7 +5874,7 @@ td.dataTables_empty {
   -moz-box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.2);
   -webkit-box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.2);
   box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.2);
-  color: #FFF;
+  color: #000;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
   border-radius: 5px;
